Fix: :adhesive_bandage: bug with closing the navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 0.5s;
 }
 .nav-menu.active{
     position: fixed;
